--- a/index.html
+++ b/index.html
@@ -44,16 +44,27 @@
           <div class="col-md-3">
             <form>
               <p>Filter Search</p>
-              <ul>
-                <li>
-                  <label for="date">Enter Date</label>
-                  <input type="text" placeholder="1/10/2010" id="datetime" />
+              <ul class="list-group bg-dark">
+                <li class="list-group-item bg-dark">
+                    <label for="date">Enter Date</label>
+                    <input type="text" placeholder="1/10/2010" id="datetime" />
                 </li>
-                <li>
-                   <button id="filter-btn" type="button" class="btn btn-default">
-                     Filter Table
-                   </button>
+                <li class="list-group-item bg-dark">
+                    <label for="city">Enter City</label>
+                    <input type="text" placeholder="la mesa" id="city" />
                 </li>
+                <li class="list-group-item bg-dark">
+                    <label for="state">Enter State</label>
+                    <input type="text" placeholder="ca" id='state'/>
+                </li>
+                <li class="list-group-item bg-dark">
+                    <label for="Country">Enter Country</label>
+                    <input type="text" placeholder="us" id='country'/>
+                </li>
+                <li class="list-group-item bg-dark">
+                    <label for="state">Enter Shape</label>
+                    <input type="text" placeholder="triangle" id='shape'/>
+                </li>    
               </ul>
              </form>
 
